2020-07-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_FORGET): Define.
	* libpoke/pkl-tab.y (BUILTIN_FORGET): Define.
	(builtin): Handle BUILTIN_FORGET.
	* libpoke/pkl-lex.l: Handle __PKL_BUILTIN_FORGET__.
	* libpoke/pkl-rt.pk (flush): Define.
	* doc/poke.texi (flush): New section.
	* libpoke/pkl-insn.def (PKL_INSN_FLUSH): Define.
	* libpoke/pvm.jitter (flush): New instruction.

2020-07-12  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/ios-dev-file.c (ios_dev_file_handler_normalize): Add
	parameter "flags".
	* libpoke/ios-dev-mem.c (ios_dev_mem_handler_normalize): Likewise.
	* libpoke/ios-dev-nbd.c (ios_dev_nbd_handler_normalize): Likewise.
	* libpoke/ios-dev.h (struct ios_dev_if): Add parameter "flags" to
	handler_normalize.
	* libpoke/ios.c (ios_open): Pass "flags" to handler_normalize.

2020-07-12  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/ios.h (ios_flush): New.
	* libpoke/ios.c (ios_flush): New.
	* libpoke/ios-dev.h (struct ios_dev_if): Add new member "flush".
	* libpoke/ios-dev-file.c (ios_dev_file_flush): New.
	* libpoke/ios-dev-mem.c (ios_dev_mem_flush): New.
	* libpoke/ios-dev-nbd.c (ios_dev_nbd_flush): New.

2020-07-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pk-val.c: Remove trailing whitespace.
	* libpoke/libpoke.h: Likewise.
	* etc/pk-mi-json-schema.json: Add missing newline at EOF.

2020-07-02  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* libpoke/libpoke.h (pk_make_struct): Prototype.
	(pk_struct_nfields): Likewise.
	(pk_struct_field_boffset): Likewise.
	(pk_struct_set_field_boffset): Likewise.
	(pk_struct_field_name): Likewise.
	(pk_struct_set_field_name): Likewise.
	(pk_struct_field_value): Likewise.
	(pk_struct_set_field_value): Likewise.
	* libpoke/pk-val.c (pk_make_struct): Define.
	(pk_struct_nfields): Likewise.
	(pk_struct_field_boffset): Likewise.
	(pk_struct_set_field_boffset): Likewise.
	(pk_struct_field_name): Likewise.
	(pk_struct_set_field_name): Likewise.